# libqi-rs

./: Cargo.toml  LICENSE.txt
backup/: notes.txt  session.rs
backup/session/: router.rs
examples/: Cargo.toml  audio.rs  client.rs
qi/: Cargo.toml  README.md
qi-derive/: Cargo.toml
qi-derive/src/: lib.rs  typed.rs
qi-derive/tests/: typed_tests.rs
qi-derive/tests/typed/: fail_enum.rs  fail_enum.stderr  fail_struct_field_not_typed.rs  fail_struct_field_not_typed.stderr  fail_struct_transparent_more_than_one_field.rs  fail_struct_transparent_more_than_one_field.stderr
qi-format/: Cargo.toml  README.md
qi-format/src/: de.rs  dynamic.rs  lib.rs  map.rs  num_bool.rs  object.rs  option.rs  raw.rs  read.rs  ser.rs  signature.rs  string.rs  tests.rs  tuple.rs  typing.rs  value.rs  write.rs
qi-format/src/value/: de.rs  mod.rs  ser.rs
qi-format/tests/: de.rs  read.rs  ser.rs  serde.rs  tests.rs  write.rs
qi-macros/: Cargo.toml
qi-macros/src/: lib.rs  object.rs  value.rs
qi-messaging/: Cargo.toml  README.md  de.rs  flags.rs  kind.rs  mod.rs  ser.rs
qi-messaging/benches/: call_benchmark.rs  dispatch_benchmark.rs
qi-messaging/src/: address.rs  binary_codec.rs  body.rs  call.rs  capabilities.rs  channel.rs  client.rs  codec.rs  connection.rs  control.rs  dispatch.rs  endpoint.rs  error.rs  format.rs  handler.rs  id_factory.rs  lib.rs  message.rs  message_types.rs  messaging.rs  notifications.rs  req_rep.rs  request.rs  server.rs  service.rs  session.rs  stream.rs
qi-messaging/src/channel/: as_service.rs  mod.rs  request.rs
qi-messaging/src/endpoint/: outgoing.rs
qi-messaging/src/message/: codec.rs  mod.rs
qi-messaging/src/service/: client.rs  mod.rs  server.rs
qi-messaging/src/session/: as_service.rs  control.rs  mod.rs  request.rs  router.rs  service.rs
qi-messaging/src/session/control/: authentication.rs  capabilities.rs  client.rs  mod.rs  request.rs  server.rs
qi-messaging/src/session/service/: request.rs
qi-messaging/subject/: action.rs
qi-messaging/tests/: binary_codec.rs  capabilities.rs  channel.rs  endpoint.rs
qi-nodes/: Cargo.toml  README.md
qi-nodes/src/: lib.rs
qi-object/: Cargo.toml  README.md
qi-object/src/: control.rs  lib.rs  node.rs  object.rs  service.rs  signal.rs  tests.rs  transport.rs
qi-object/src/control/: authentication.rs  capabilities.rs
qi-object/src/object/: client.rs  dynamic.rs  error.rs
qi-serde/: Cargo.toml
qi-serde/src/: de.rs  lib.rs  reflect.rs  ser.rs  signature.rs  type.rs
qi-serde/src/anyvalue/: de.rs  mod.rs  ser.rs
qi-serde/src/format/: de.rs  mod.rs  ser.rs
qi-serde/src/message/: mod.rs
qi-serde/src/message/subject/: mod.rs
qi-serde/src/value/: de.rs  mod.rs  ser.rs
qi-services/: Cargo.toml  README.md
qi-services/src/: address.rs  channel.rs  error.rs  lib.rs  machine_id.rs  node.rs  object.rs  sd.rs  service.rs  session.rs  signal.rs  space.rs  tests.rs
qi-services/src/node/: sessions.rs
qi-services/src/object/: any.rs
qi-services/src/object/any/: method.rs
qi-services/src/session/: authentication.rs  capabilities.rs  control.rs
qi-services/src/session/control/: authentication.rs  capabilities.rs
qi-tools/: Cargo.toml
qi-type/: Cargo.toml
qi-type/src/: lib.rs  signature.rs  ty.rs  typed.rs
qi-type/src/typed/: impls.rs
qi-types/: Cargo.toml  README.md
qi-types/src/: dynamic.rs  lib.rs  map.rs  num_bool.rs  object.rs  signature.rs  tuple.rs  ty.rs  typing.rs  value.rs
qi-types/src/ty/: impls.rs
qi-utils/: Cargo.toml
qi-value/: Cargo.toml  README.md
qi-value/src/: anyvalue.rs  as_raw.rs  dynamic.rs  ids.rs  kv_map.rs  lib.rs  map.rs  num_bool.rs  number.rs  object.rs  os.rs  reflect.rs  signature.rs  ty.rs  value.rs
qi-value/src/dynamic/: de.rs
qi-value/src/ty/: ser.rs
qi-value/src/value/: de.rs  impls.rs  ser.rs  string.rs
qi-value/tests/: dynamic.rs  map.rs  signature.rs  string.rs
qi/src/: address.rs  binary_value.rs  channel.rs  error.rs  lib.rs  machine_id.rs  never.rs  node.rs  object.rs  os.rs  sd.rs  service.rs  service_directory.rs  session.rs  signal.rs  space.rs  value.rs
qi/src/node/: address.rs  messaging_handler.rs  messaging_service.rs  objects.rs  router_handler.rs  server.rs  service_map.rs  services.rs  session_cache.rs  session_factory.rs  sessions.rs
qi/src/session/: address.rs  authentication.rs  cache.rs  capabilities.rs  channel.rs  control.rs  error.rs  map.rs  message_body.rs  message_format.rs  reference.rs  registry.rs  target.rs
qi/tests/: os.rs  session.rs
src/: lib.rs  message.rs  object.rs  value.rs
src/anyvalue/: mod.rs  ser.rs
src/message/subject/: object.rs
src/proto/: de.rs  message.rs  mod.rs  ser.rs  utils.rs
src/proto/message/: action.rs  flags.rs  kind.rs  mod.rs
src/proto/message/subject/: mod.rs  service.rs
src/proto/value/: de.rs  mod.rs  ser.rs  tuple.rs
src/typesystem/: mod.rs  signature.rs  tuple.rs  type.rs
src/typesystem/type/: conversions.rs  mod.rs
src/typesystem/value/: de.rs  mod.rs  ser.rs
src/typesystem/value/dynamic/: de.rs  mod.rs  ser.rs
src/value/: de.rs  mod.rs  ser.rs  type.rs
src/value/type/: conversions.rs  mod.rs
tests-macros/: Cargo.toml
tests-macros/tests/: value_tests.rs
tests-macros/tests/value/: fail_enum.rs  fail_enum.stderr  fail_struct_field_not_impl.rs  fail_struct_field_not_impl.stderr  fail_struct_field_not_typed.rs  fail_struct_field_not_typed.stderr  fail_struct_transparent_more_than_one_field.rs  fail_struct_transparent_more_than_one_field.stderr
