[package]
name = "libqi"
version = "0.1.0"
edition = "2021"

[lib]
name = "qi"

[dependencies]
bitflags = "1.3.2"
futures = "0.3.24"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.36"
serde_bytes = "0.11.7"
seq-macro = "0.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
futures-test = "0.3.24"
pretty_assertions = "1.3.0"
serde_test = "1.0.145"
