[package]
name = "qi-format"
description = "The `qi` binary format for values of the `qi` type system"

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
sealed = "0.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
serde-value = "0.7.0"
serde_bytes = "0.11.14"
qi-value = { path = "../qi-value" }
