[package]
name = "qi-macros"

license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.37"
proc-macro2 = "1.0.67"
convert_case = "0.6.0"
thiserror = "1.0.49"

[dev-dependencies]
assert_matches = "1.5.0"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }
pretty_assertions = "1.4.0"
