[package]
name = "qi-macros"

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.66"
proc-macro2 = "1.0.85"
convert_case = "0.6.0"

[dev-dependencies]
assert_matches = "1.5.0"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
pretty_assertions = "1.4.0"
qi-macros = { path = "../qi-macros" }
qi-value = { path = "../qi-value" }
