[package]
name = "qi-messaging"
description = ""

license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.63"

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
derive_more = "0.99.17"
derive-new = "0.5.9"
futures = "0.3.27"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["io-util", "sync", "macros", "rt"] }
tracing = "0.1.37"
tokio-util = { version = "0.7.7", features = ["codec"] }
qi-types = { path = "../qi-types" }
qi-format = { path = "../qi-format" }
bitflags = "1.3.2"
tokio-stream = { version = "0.1.14", default-features = false }
pin-project-lite = "0.2.9"
once_cell = "1.17.2"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
