[package]
name = "qi-messaging"
description = ""

license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.68"

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.27"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["io-util", "macros"] }
tracing = "0.1.37"
tokio-util = { version = "0.7.7", features = ["codec"] }
qi-value = { path = "../qi-value" }
pin-project-lite = "0.2.13"
tower-service = "0.3.2"
serde_with = "3.7.0"

[dev-dependencies]
assert_matches = "1.5.0"
serde_json = "1.0.114"
tokio-test = "0.4.3"
