[package]
name = "qi-messaging"
description = ""

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
derive_more = "0.99.18"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.41.1", features = ["io-util", "macros", "net"] }
tracing = "0.1.40"
tokio-util = { version = "0.7.12", features = ["codec"] }
qi-value = { path = "../qi-value" }
pin-project-lite = "0.2.14"
serde_with = "3.8.1"
url = { version = "2.5.2", features = ["serde"] }
async-stream = "0.3.5"
either = "1.13.0"

[dev-dependencies]
assert_matches = "1.5.0"
serde_json = "1.0.117"
tokio-test = "0.4.4"
