[package]
name = "qi-object"
description = ""

license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
derive_more = "0.99.17"
futures = "0.3.27"
iri-string = { version = "0.5.6", features = ["serde-std"] }
pin-project-lite = "0.2.9"
qi-messaging = { path = "../qi-messaging" }
qi-types = { path = "../qi-types" }
qi-format = { path = "../qi-format" }
sealed = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.28.2", features = ["net", "rt"] }
tracing = "0.1.37"
either = "1.8.1"
tower = "0.4.13"
once_cell = "1.18.0"
