[package]
name = "qi-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "0.5.9"
derive_more = "0.99.17"
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
serde_bytes = "0.11.7"
serde_test = "1.0.147"
