[package]
name = "qi-services"
description = ""

license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qi-messaging = { path = "../qi-messaging" }
qi-value = { path = "../qi-value" }
qi-format = { path = "../qi-format" }
qi-macros = { path = "../qi-macros" }
async-trait = "0.1.68"
futures = "0.3.27"
iri-string = { version = "0.5.6", features = ["serde-std"] }
pin-project-lite = "0.2.9"
sealed = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.28.2", features = ["net"] }
tower = "0.4.13"
once_cell = "1.18.0"
seq-macro = "0.3.5"

[dev-dependencies]
assert_matches = "1.5.0"
