[package]
name = "qi-type"
version = "0.1.0-dev"
edition = "2021"
license-file = "../LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
seq-macro = "0.3.5"
thiserror = "1.0.39"
derive_more = "0.99.17"
bytes = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_test = "1.0.152"
