[package]
name = "qi-types"
description = "Types of the `qi` type system"
keywords = ["qi", "type", "typesystem"]
license-file = "LICENSE.txt"
repository = "https://github.com/nyibbang/libqi-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
derive_more = "0.99.17"
ordered-float = { version = "3.4.0", features = ["serde"] }
thiserror = "1.0.39"
bytes = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
serde_test = "1.0.152"
serde-value = "0.7.0"
