[package]
name = "qi-value"
description = "Values of the `qi` type system"

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"

[dependencies]
qi-macros = { path = "../qi-macros" }
derive_more = "0.99.18"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
seq-macro = "0.3.5"
ordered-float = { version = "4.2.0", features = ["serde"] }
bytes = { version = "1.6.0", features = ["serde"] }
serde_with = "3.11.0"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4", "v5"] }
machine-uid = { version = "0.5.3", optional = true }
dirs = "5.0.1"
sha1_smol = "1.0.1"

[dev-dependencies]
serde_test = "1.0.177"

[features]
default = ["machine-uid"]
