[package]
name = "qi"
description = ""

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qi-messaging = { path = "../qi-messaging" }
qi-value = { path = "../qi-value" }
qi-format = { path = "../qi-format" }
qi-macros = { path = "../qi-macros" }
async-trait = "0.1.68"
futures = "0.3.27"
sealed = "0.5.0"
thiserror = "1.0.39"
tokio = { version = "1.38.0" }
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
once_cell = "1.18.0"
machine-uid = { version = "0.5.1", optional = true }
dirs = "5.0.1"
uuid = { version = "1.6.1", features = ["v4", "v5"] }
sha1 = "0.10.6"
tower = { version = "0.4.13", features = ["util"] }
serde = "1.0.197"
url = { version = "2.5.0" }

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = ["machine-uid"]
