[package]
name = "qi"
description = ""

license-file = "../LICENSE.txt"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qi-messaging = { path = "../qi-messaging" }
qi-value = { path = "../qi-value" }
qi-format = { path = "../qi-format" }
qi-macros = { path = "../qi-macros" }
async-trait = "0.1.80"
futures = "0.3.30"
sealed = "0.5.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0" }
bytes = "1.6.0"
once_cell = "1.19.0"
serde = "1.0.203"
url = { version = "2.5.2" }
tracing = "0.1.40"
serde_with = "3.11.0"
uuid = { version = "1.11.0", features = ["v4"] }
derive_more = { version = "1.0.0", features = ["display", "from", "into"] }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.38.0", features = ["rt"] }

[features]
default = ["machine-uid"]
machine-uid = ["qi-value/machine-uid"]
