[package]
name = "tests-macros"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qi-macros = { path = "../qi-macros" }
qi-value = { path = "../qi-value" }
trybuild = "1.0.96"
assert_matches = "1.5.0"
syn = { version = "2.0.66", features = ["extra-traits"] }
pretty_assertions = "1.4.0"
